# Lagori_Robots_2022

./: README.md
esp_2022_lagori_codes/r1_7seg_disp/: CMakeLists.txt  r1_7seg.c
esp_2022_lagori_codes/r1_base_esp32_test/: r1_base_esp32_test.ino
esp_2022_lagori_codes/r2_base_gripper_stepper/: r2_base_gripper_stepper.ino
esp_2022_lagori_codes/r2_esp_pico_uart_arduino_ide/: r2_esp_pico_uart_arduino_ide.ino
esp_2022_lagori_codes/r2_pico_uart_s3_n_g3/: CMakeLists.txt  r2_uart.c
pico_ros2_2022_lagori_code/BACKUP_TRASH/captain_differential_code/: CMakeLists.txt  pico_code.c
pico_ros2_2022_lagori_code/BACKUP_TRASH/captain_differential_code/libmicroros/include/lagori_robot_msgs/msg/: r2_limit_switch.h  r2_limit_switch.hpp  r2_limit_switch_stepper1.hpp  r2_limit_switch_stepper2.hpp  r2_limit_switch_stepper3.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  stepper_msg.hpp
pico_ros2_2022_lagori_code/BACKUP_TRASH/captain_differential_code/libmicroros/include/lagori_robot_msgs/msg/detail/: gripper_msg__functions.c  gripper_msg__rosidl_typesupport_fastrtps_c.h  gripper_msg__rosidl_typesupport_fastrtps_cpp.hpp  gripper_msg__rosidl_typesupport_introspection_cpp.hpp  gripper_msg__struct.hpp  gripper_msg__traits.hpp  gripper_msg__type_support.c  r2_limit_switch__builder.hpp  r2_limit_switch__functions.c  r2_limit_switch__functions.h  r2_limit_switch__rosidl_typesupport_fastrtps_c.h  r2_limit_switch__rosidl_typesupport_fastrtps_cpp.hpp  r2_limit_switch__rosidl_typesupport_introspection_c.h  r2_limit_switch__rosidl_typesupport_introspection_cpp.hpp  r2_limit_switch__struct.h  r2_limit_switch__struct.hpp  (+48 more)
pico_ros2_2022_lagori_code/BACKUP_TRASH/r1_base_controls/: CMakeLists.txt  r1_base_controls_pico.c
pico_ros2_2022_lagori_code/BACKUP_TRASH/r1_base_controls/libmicroros/include/lagori_robot_msgs/msg/detail/: r2_limit_switch_stepper2__rosidl_typesupport_microxrcedds_c.h  robot_one_controls__type_support.h
pico_ros2_2022_lagori_code/BACKUP_TRASH/r1_base_controls/microros_static_library/library_generation/extra_packages/lagori_robot_msgs/lagori_robot_msgs/msg/: RobotOneControls.msg
pico_ros2_2022_lagori_code/BACKUP_TRASH/r1_shooting_controls/: CMakeLists.txt  r1_shooting_controls_pico.c
pico_ros2_2022_lagori_code/BACKUP_TRASH/r2_gripper_n_omni_wheels/: CMakeLists.txt  r2_gripper_omni_wheels_pico.c
pico_ros2_2022_lagori_code/BACKUP_TRASH/r2_stepper/: CMakeLists.txt  pubsl.c  r2_stepper_pico.c
pico_ros2_2022_lagori_code/BACKUP_TRASH/r2_stepper/libmicroros/include/lagori_robot_msgs/msg/: stepper_msg.h
pico_ros2_2022_lagori_code/BACKUP_TRASH/r2_stepper/libmicroros/include/lagori_robot_msgs/msg/detail/: r2_limit_switch_stepper1__functions.h  r2_limit_switch_stepper2__functions.h  stepper_msg__type_support.h
pico_ros2_2022_lagori_code/BACKUP_TRASH/tf_mini_s/: CMakeLists.txt  pico_micro_ros_example.c
pico_ros2_2022_lagori_code/encoders/: pico_micro_ros_example.c
pico_ros2_2022_lagori_code/r1_pico_1/: CMakeLists.txt  r1_pico_1.c
pico_ros2_2022_lagori_code/r1_pico_1/libmicroros/include/lagori_robot_msgs/msg/: robot_one_controls.h
pico_ros2_2022_lagori_code/r1_pico_1/libmicroros/include/lagori_robot_msgs/msg/detail/: r2_limit_switch_stepper2__type_support.h  r2_limit_switch_stepper3__rosidl_typesupport_microxrcedds_c.h  stepper_msg__struct.h
pico_ros2_2022_lagori_code/r1_pico_2/: CMakeLists.txt  available_ros2_types  built_packages  r1_pico_2.c
pico_ros2_2022_lagori_code/r1_pico_2/libmicroros/include/lagori_robot_msgs/msg/: gripper_msg.h  rosidl_generator_c__visibility_control.h
pico_ros2_2022_lagori_code/r1_pico_2/libmicroros/include/lagori_robot_msgs/msg/detail/: r2_limit_switch_stepper1__rosidl_typesupport_microxrcedds_c.h  r2_limit_switch_stepper1__type_support.h  r2_limit_switch_stepper2__struct.h
pico_ros2_2022_lagori_code/r1_pico_2/microros_static_library/library_generation/: library_generation.sh
pico_ros2_2022_lagori_code/r1_pico_2/microros_static_library/library_generation/extra_packages/: extra_packages.repos
pico_ros2_2022_lagori_code/r2_pico_1/: r2_pico_1.c
pico_ros2_2022_lagori_code/r2_pico_1/libmicroros/include/lagori_robot_msgs/msg/detail/: robot_one_controls__struct.h  stepper_msg__functions.h
pico_ros2_2022_lagori_code/r2_pico_1_int/: r2_pico_1.c
pico_ros2_2022_lagori_code/r2_pico_1_int/libmicroros/include/lagori_robot_msgs/msg/detail/: gripper_msg__struct.h  robot_one_controls__functions.h
pico_ros2_2022_lagori_code/r2_pico_2/: r2_pico_2.c
pico_ros2_2022_lagori_code/r2_pico_2/libmicroros/include/lagori_robot_msgs/msg/: rosidl_typesupport_microxrcedds_c__visibility_control.h
pico_ros2_2022_lagori_code/r2_pico_2/libmicroros/include/lagori_robot_msgs/msg/detail/: gripper_msg__functions.h  gripper_msg__rosidl_typesupport_microxrcedds_c.h
pico_ros2_2022_lagori_code/r2_pico_2/microros_static_library/library_generation/extra_packages/: extra_packages.repos
pico_ros2_2022_lagori_code/r2_pico_2_int/: CMakeLists.txt  r2_pico_2.c
pico_ros2_2022_lagori_code/r2_pico_2_int/libmicroros/include/lagori_robot_msgs/msg/detail/: stepper_msg__rosidl_typesupport_microxrcedds_c.h
pico_ros2_2022_lagori_code/r2_pico_stage_2/: CMakeLists.txt  r2_pico_1.c
pico_ros2_2022_lagori_code/r2_pico_stage_2/libmicroros/include/lagori_robot_msgs/msg/: r2_limit_switch_stepper1.h  r2_limit_switch_stepper2.h  r2_limit_switch_stepper3.h
pico_ros2_2022_lagori_code/r2_pico_stage_2/libmicroros/include/lagori_robot_msgs/msg/detail/: r2_limit_switch_stepper3__struct.h  robot_one_controls__rosidl_typesupport_microxrcedds_c.h
ros2_ws/src/ps4_cmd_vel/: setup.py
ros2_ws/src/ps4_cmd_vel/ps4_cmd_vel/: cmd_R1_vel.py  cmd_R2_vel.py
ros2_ws/src/relay_switch/: package.xml  setup.cfg  setup.py
ros2_ws/src/relay_switch/relay_switch/: relay_switch.py  relay_switch.py.save
ros2_ws/src/robot_one/robot_one/: robot_1_sub.py
ros2_ws/src/robot_two/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_two/launch/: robot_two_launch.py
ros2_ws/src/robot_two/robot_two/: gripper.py  stepper.py  stepper_gripper.py
(+50 files in other folders)
